@@ -1,27 +1,22 @@
 package org.example;
 
 import lombok.Getter;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
-import java.net.HttpURLConnection;
-import java.net.MalformedURLException;
-import java.net.ProtocolException;
-import java.net.URL;
+import java.net.*;
 import java.nio.charset.StandardCharsets;
-
+@Slf4j
 @Getter
 @Component
 public class MyRequest {
-    public static Logger log = LoggerFactory.getLogger(Main.class);
-    private URL url;
+
     private int responseCode;
-    private Auth auth;
+    private final Auth auth;
 
     @Autowired
     public MyRequest(Auth auth) {
@@ -33,15 +28,16 @@ public class MyRequest {
         StringBuilder response = new StringBuilder();
         String line;
         try {
-            this.url = new URL(myUrl);
+            URI uri = URI.create(myUrl);
+            URL url = uri.toURL();
+
             HttpURLConnection connection = (HttpURLConnection) url.openConnection();
             connection.setRequestMethod("GET");
-
-            //log.info("Login: " + auth.getAuth());
 
             connection.setRequestProperty("Authorization", "Basic " + auth.getAuthInfo());
 
             responseCode = connection.getResponseCode();
+            //log.info("Response Code : " + responseCode);
 
             if (responseCode == 200) {
                 BufferedReader reader = new BufferedReader(new InputStreamReader(connection.getInputStream(), StandardCharsets.UTF_8));
@@ -54,8 +50,6 @@ public class MyRequest {
 
         } catch (MalformedURLException e) {
             log.error("Не корректный URL: " + e.getMessage());
-        } catch (ProtocolException e) {
-            throw new RuntimeException(e);
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
